--- a/Donor/view/controller/stations2/HSStationsSelectCityViewController.xib
+++ b/Donor/view/controller/stations2/HSStationsSelectCityViewController.xib
@@ -105,6 +105,7 @@
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">3</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBPlaceholder">Поиск</string>
 						<object class="IBUITextInputTraits" key="IBTextInputTraits">
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
@@ -357,20 +358,6 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">HSStationsSelectCityViewController</string>
 					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="onPressCancel:">id</string>
-						<string key="onPressOk:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="onPressCancel:">
-							<string key="name">onPressCancel:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="onPressOk:">
-							<string key="name">onPressOk:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="cityTable">UITableView</string>
 						<string key="navBar">UINavigationBar</string>
