--- a/Donor/view/controller/stations2/HSStationsViewController.xib
+++ b/Donor/view/controller/stations2/HSStationsViewController.xib
@@ -101,6 +101,7 @@
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUIContentMode">3</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBPlaceholder">Поиск</string>
 						<object class="IBUITextInputTraits" key="IBTextInputTraits">
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
@@ -238,6 +239,7 @@
 			</object>
 			<object class="IBUISearchDisplayController" id="975931439">
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+				<string key="IBUISearchResultsTitle"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
