--- a/Donor/view/controller/profile/HSProfileRegistrationViewController.xib
+++ b/Donor/view/controller/profile/HSProfileRegistrationViewController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1536</int>
+		<int key="IBDocument.SystemTarget">1552</int>
 		<string key="IBDocument.SystemVersion">11G63</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
+		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
 		<string key="IBDocument.AppKitVersion">1138.51</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1926</string>
+			<string key="NS.object.0">2083</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
@@ -40,9 +40,10 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIImageView" id="1030225608">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="820582394"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -61,6 +62,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{6, 5}, {307, 39}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="216031030"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -75,6 +77,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{9, 46}, {301, 3}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="468092592"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -89,6 +92,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{6, 51}, {307, 39}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1011786993"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -100,6 +104,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{9, 92}, {301, 3}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="137556392"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -111,6 +116,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{6, 97}, {307, 39}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="145286777"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -122,6 +128,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{9, 138}, {301, 3}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="874683334"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -133,6 +140,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{9, 184}, {301, 3}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="930176557"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -144,6 +152,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{9, 230}, {301, 3}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1060389073"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -155,6 +164,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{9, 276}, {301, 3}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -165,6 +175,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{22, 3}, {278, 43}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="920733005"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="712894875">
@@ -204,6 +215,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{21, 49}, {278, 43}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="488299327"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="712894875"/>
@@ -233,6 +245,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{19, 191}, {291, 37}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="463657129"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -260,6 +273,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{19, 238}, {291, 37}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="460615596"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -284,6 +298,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{19, 153}, {42, 20}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="787316981"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -307,6 +322,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 199}, {42, 21}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1000351897"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -330,6 +346,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{19, 243}, {140, 23}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1024409317"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -353,6 +370,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 95}, {278, 43}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="419376220"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="712894875"/>
@@ -382,6 +400,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{64, 142}, {246, 43}}</string>
 								<reference key="NSSuperview" ref="820582394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="600215910"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="712894875"/>
@@ -409,6 +428,7 @@
 						</array>
 						<string key="NSFrame">{{0, 2}, {320, 289}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="757590373"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="712894875"/>
@@ -417,6 +437,7 @@
 				</array>
 				<string key="NSFrame">{{0, 44}, {320, 436}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1030225608"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -733,12 +754,86 @@
 			<nil key="sourceID"/>
 			<int key="maxID">77</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">HSProfileRegistrationViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="bloodGroupButtonClick:">id</string>
+						<string key="cancelButtonClick:">id</string>
+						<string key="doneButtonClick:">id</string>
+						<string key="sexButtonClick:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="bloodGroupButtonClick:">
+							<string key="name">bloodGroupButtonClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="cancelButtonClick:">
+							<string key="name">cancelButtonClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="doneButtonClick:">
+							<string key="name">doneButtonClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="sexButtonClick:">
+							<string key="name">sexButtonClick:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="bloodGroupButton">UIButton</string>
+						<string key="dataView">UIView</string>
+						<string key="emailTextField">UITextField</string>
+						<string key="nameTextField">UITextField</string>
+						<string key="passwordConfirmTextField">UITextField</string>
+						<string key="passwordTextField">UITextField</string>
+						<string key="sexButton">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="bloodGroupButton">
+							<string key="name">bloodGroupButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="dataView">
+							<string key="name">dataView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="emailTextField">
+							<string key="name">emailTextField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nameTextField">
+							<string key="name">nameTextField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="passwordConfirmTextField">
+							<string key="name">passwordConfirmTextField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="passwordTextField">
+							<string key="name">passwordTextField</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="sexButton">
+							<string key="name">sexButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HSProfileRegistrationViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1536" key="NS.object.0"/>
+			<real value="1552" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -747,6 +842,6 @@
 			<string key="cell.png">{306, 37}</string>
 			<string key="dottedLine.png">{301, 3}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1926</string>
+		<string key="IBCocoaTouchPluginVersion">2083</string>
 	</data>
 </archive>
