--- a/wp7-donor/Donor/Pages/Foursquare/FoursquareLogin.xaml
+++ b/wp7-donor/Donor/Pages/Foursquare/FoursquareLogin.xaml
@@ -21,10 +21,10 @@
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel Grid.Row="0" Margin="12,17,0,28">
+        <!--<StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="Донор" Style="{StaticResource PhoneTextNormalStyle}"/>
             <TextBlock Text="Foursquare" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
-        </StackPanel>
+        </StackPanel>-->
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
