MainPage - news tap fix

--- a/wp7-donor/Donor/Pages/Ads/AdsList.xaml
+++ b/wp7-donor/Donor/Pages/Ads/AdsList.xaml
@@ -22,7 +22,7 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot">
         <Grid.Background>
-            <ImageBrush ImageSource="images/back_02.png"/>
+            <ImageBrush ImageSource="/images/back_02.png"/>
         </Grid.Background>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
