--- a/wp7-donor/Donor/Pages/Achieves/AchievesPage.xaml
+++ b/wp7-donor/Donor/Pages/Achieves/AchievesPage.xaml
@@ -58,7 +58,7 @@
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
-                    <TextBlock Text="Скоро" Margin="0,20,0,20" Style="{StaticResource Text36pxB9A194}" FontSize="36"/>
+                    <TextBlock Text="{Binding Soon, Source={StaticResource Loc}}" Margin="0,20,0,20" Style="{StaticResource Text36pxB9A194}" FontSize="36"/>
                     <ListBox Margin="0,-15,-12,0" Name="SoonBadges"
                      ScrollViewer.VerticalScrollBarVisibility="Disabled"
                      tilteffect:TiltEffect.IsTiltEnabled="True" 
@@ -81,7 +81,7 @@
 					        Foreground="#FFFFFFFF"
 					        FontFamily="Segoe WP Regular" 
                             BorderThickness="3"
-                            Content="Itsbeta"
+                            Content="{Binding Itsbeta, Source={StaticResource Loc}}"
                             Click="ItsbetaAppButton_Click"/>
                 </StackPanel>
             </ScrollViewer>
