--- a/wp7-donor/Donor/Pages/HelpPage.xaml
+++ b/wp7-donor/Donor/Pages/HelpPage.xaml
@@ -76,7 +76,7 @@ FontSize="24" FontFamily="Segoe WP Semibold" />
                                 <TextBlock
                                     FontSize="24" FontWeight="Normal"
 							    Style="{StaticResource Text24pxC0A89A}" 							
-							    Text="(звонок из регионов бесплатный)"/>
+							    Text="{Binding FreeCallFromRegions, Source={StaticResource Loc}}"/>
                             </StackPanel>
                         </StackPanel>
 
@@ -107,7 +107,9 @@ FontSize="24" FontFamily="Segoe WP Semibold" />
                         </StackPanel>
 						
 						<StackPanel>
-                            <Button Content="Оценить приложение" FontSize="24"
+                            <Button 
+                    Content="{Binding RateAppButton,Source={StaticResource Loc}}" 
+                    FontSize="24"
 					Background="#FF4186A3" Name="RateButton"
 					BorderBrush="#FF4186A3" 
                     Margin="-12,14,-12,0"
@@ -139,29 +141,17 @@ FontSize="24" FontFamily="Segoe WP Semibold" />
                                 <msp:HTMLViewer 
 								Foreground="#FF847168"
 								FontSize="24"
-								ScrollViewer.VerticalScrollBarVisibility="Disabled">
-                                    • Не приходите сдавать кровь, если вы чувствуете недомогание (озноб, головокружение, головную боль, слабость).&lt;br/&gt;
-                                    • Не курите за час до донации.&lt;br/&gt;
-                                    • Не принимайте алкоголь за 48 часов до донации.&lt;br/&gt;
-                                    • Обязательно выспитесь и съешьте легкий завтрак (сладкий чай, сухое печенье, каша на воде).&lt;br/&gt;
-                                    • Старайтесь ограничить прием жирной и жареной пищи накануне сдачи крови.&lt;br/&gt;
-                                    • За три дня до донации откажитесь от приема анальгетиков и аспирина, а также содержащих их лекарств (эти вещества ухудшают свертываемость крови).&lt;br/&gt;
-                                    • Во время осмотра врачом перед донацией откровенно отвечайте на его вопросы и не скрывайте информацию о принятых лекарствах и перенесенных заболеваниях.&lt;br/&gt;
-                                </msp:HTMLViewer>
+                                Html="{Binding HelpRecomendations, Source={StaticResource Loc}}"
+								ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
 
-                                <TextBlock Text="После сдачи крови" Margin="0,0,0,10"
+                                <TextBlock Text="{Binding AfterBloodDonation, Source={StaticResource Loc}}" Margin="0,0,0,10"
 								Style="{StaticResource Text36pxC0A89A}"/>
                                 
-<msp:HTMLViewer
-Foreground="#FF847168"
-FontSize="24"
-ScrollViewer.VerticalScrollBarVisibility="Disabled">
-• 10–15 минут посидите спокойно и, если вы хорошо себя чувствуете (не испытываете слабости или головокружения), пройдите в буфет и выпейте сладкий чай.&lt;br/&gt;
-• Если вы почувствовали головокружение, обратитесь к медперсоналу. Самый простой способ помочь себе – лечь и поднять ноги выше головы или сесть и опустить голову между колен. Ни в коем случае не пытайтесь идти или вести машину, если у вас кружится голова!&lt;br/&gt;
-• В течение 3–4 часов не снимайте повязку и старайтесь ее не мочить. Это убережет вас от возникновения синяка (если синяк появился, на ночь сделайте повязку с гепариновой мазью и/или троксевазином).&lt;br/&gt;                          
-• Избегайте в этот день тяжелых физических и спортивных нагрузок, подъема тяжестей, в том числе и сумок с покупками.&lt;br/&gt;
-• Полноценно и регулярно питайтесь в течение 2 суток после донации и выпивайте не менее 2 литров жидкости в день: соки, воду, некрепкий чай (алкоголь не рекомендуется).&lt;br/&gt;
-                                </msp:HTMLViewer>
+                                <msp:HTMLViewer
+                                Foreground="#FF847168"
+                                FontSize="24"
+                                Html="{Binding AfterBloodDonationDescription, Source={StaticResource Loc}}"
+                                ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
                             </StackPanel>
                         </ScrollViewer>
                     </StackPanel>
@@ -179,46 +169,36 @@ ScrollViewer.VerticalScrollBarVisibility="Disabled">
                 <Grid Margin="0,30,0,0">                    
                     <StackPanel>
                         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="0">
-
 							<toolkit:AutoCompleteBox Name="ContraSearchText" FilterMode="Contains" IsDropDownOpen="False" ValueMemberPath="Title" Foreground="#FFE0B390" Background="#FF3C1B00" BorderBrush="#FF3C1B00" Populating="StationsSearchText_Populating" Populated="ContraSearchText_Populated" LostFocus="ContraSearchText_LostFocus" IsTextCompletionEnabled="True">
-                                <!--<toolkit:AutoCompleteBox.ItemTemplate>
-                                    <DataTemplate>
-                                        <StackPanel Orientation="Horizontal" Background="#FF3C1B00"
-										Margin="0">
-                                            <TextBlock Foreground="#FFE0B390" Text="{Binding Title}"/>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </toolkit:AutoCompleteBox.ItemTemplate>-->
                             </toolkit:AutoCompleteBox>
-
                         </StackPanel>
                         <ScrollViewer Height="510">
                             <StackPanel>
 
-<ListBox Name="SearchContra" 
-ScrollViewer.VerticalScrollBarVisibility="Disabled">                                    
-    <ListBox.ItemTemplate>                              
-        <DataTemplate>                            
-            <StackPanel Margin="0,0,0,15">                      
-                <TextBlock Text="{Binding Title}" TextWrapping="Wrap"/>
-</StackPanel>
-</DataTemplate>
-</ListBox.ItemTemplate>
-</ListBox>
+                                <ListBox Name="SearchContra" 
+                                ScrollViewer.VerticalScrollBarVisibility="Disabled">                                    
+                                    <ListBox.ItemTemplate>                              
+                                        <DataTemplate>                            
+                                            <StackPanel Margin="0,0,0,15">                      
+                                                <TextBlock Text="{Binding Title}" TextWrapping="Wrap"/>
+                                </StackPanel>
+                                </DataTemplate>
+                                </ListBox.ItemTemplate>
+                                </ListBox>
 
-                                <TextBlock 
-								Text="{Binding AbsContras, Source={StaticResource Loc}}" 
-                                Height="120"
-								Style="{StaticResource Text36pxC0A89A}" 
-								TextWrapping="Wrap" Tap="TextBlock_Tap_1" />
+                                                                <TextBlock 
+								                                Text="{Binding AbsContras, Source={StaticResource Loc}}" 
+                                                                Height="120"
+								                                Style="{StaticResource Text36pxC0A89A}" 
+								                                TextWrapping="Wrap" Tap="TextBlock_Tap_1" />
 
-<ListBox Name="AbsContra" ItemsSource="{Binding Contras.Items}" 
-Visibility="Collapsed" ScrollViewer.VerticalScrollBarVisibility="Disabled">                                    <ListBox.ItemTemplate>                              <DataTemplate>                            <StackPanel Margin="0,0,0,15">      
-<TextBlock Text="{Binding Title}" Style="{StaticResource Text24px847168}" TextWrapping="Wrap"/>                    
-</StackPanel>
-</DataTemplate>
-</ListBox.ItemTemplate>
-</ListBox>
+                                <ListBox Name="AbsContra" ItemsSource="{Binding Contras.Items}" 
+                                Visibility="Collapsed" ScrollViewer.VerticalScrollBarVisibility="Disabled">                                    <ListBox.ItemTemplate>                              <DataTemplate>                            <StackPanel Margin="0,0,0,15">      
+                                <TextBlock Text="{Binding Title}" Style="{StaticResource Text24px847168}" TextWrapping="Wrap"/>                    
+                                </StackPanel>
+                                </DataTemplate>
+                                </ListBox.ItemTemplate>
+                                </ListBox>
                                 <TextBlock Height="180"
 								Text="{Binding TempContras, Source={StaticResource Loc}}" 
 								Style="{StaticResource Text36pxC0A89A}" 
@@ -251,12 +231,6 @@ Visibility="Collapsed" ScrollViewer.VerticalScrollBarVisibility="Disabled">     
                 <Grid Margin="0,30,0,0">  
                     <ScrollViewer Height="600">                 
                     <StackPanel>
-<!--                                &lt;ul&gt;
-&lt;li&gt;10–15 минут посидите спокойно и, если вы хорошо себя чувствуете (не испытываете слабости или головокружения), пройдите в буфет и выпейте сладкий чай.&lt;/li&gt;
-&lt;li&gt;Если вы почувствовали головокружение, обратитесь к медперсоналу. Самый простой способ помочь себе – лечь и поднять ноги выше головы или сесть и опустить голову между колен. Ни в коем случае не пытайтесь идти или вести машину, если у вас кружится голова!&lt;/li&gt;
-&lt;li&gt;В течение 3–4 часов не снимайте повязку и старайтесь ее не мочить. Это убережет вас от возникновения синяка (если синяк появился, на ночь сделайте повязку с гепариновой мазью и/или троксевазином).&lt;/li&gt;                          &lt;li&gt;Избегайте в этот день тяжелых физических и спортивных нагрузок, подъема тяжестей, в том числе и сумок с покупками.&lt;/li&gt;
-&lt;li&gt;Полноценно и регулярно питайтесь в течение 2 суток после донации и выпивайте не менее 2 литров жидкости в день: соки, воду, некрепкий чай (алкоголь не рекомендуется).&lt;/li&gt;
-&lt;/ul&gt;-->
                             <TextBlock 
 								Text="{Binding YouCanGiveBloodIf, Source={StaticResource Loc}}" TextWrapping="Wrap"
 								Style="{StaticResource Text36pxC0A89A}"/>
@@ -264,17 +238,8 @@ Visibility="Collapsed" ScrollViewer.VerticalScrollBarVisibility="Disabled">     
                             <msp:HTMLViewer 
 							Foreground="#FF847168"
 							FontSize="24"
-							ScrollViewer.VerticalScrollBarVisibility="Disabled">
-
-• вы не&amp;nbsp;употребляли алкоголь за&amp;nbsp;последние 48 часов;&lt;br/&gt;
-• вы не&amp;nbsp;принимали анальгетики за&amp;nbsp;последние 72 часа;&lt;br/&gt;
-• для женщин: после окончания менструации прошло 5 дней;&lt;br/&gt;
-• вам не&amp;nbsp;удаляли зуб за&amp;nbsp;последние 10 дней;&lt;br/&gt;
-• вы не&amp;nbsp;принимали антибиотики за&amp;nbsp;последние 2 недели;&lt;br/&gt;
-• вы не&amp;nbsp;болели ангиной, гриппом, ОРВИ за&amp;nbsp;последний месяц;&lt;br/&gt;
-• у&amp;nbsp;вас не&amp;nbsp;было обострения аллергии за&amp;nbsp;последние 2&amp;nbsp;месяца.&lt;/li&gt;
-&lt;br/&gt;
-                            </msp:HTMLViewer>
+                            Html="{Binding YouCanGiveBloodIfDescription, Source={StaticResource Loc}}"
+							ScrollViewer.VerticalScrollBarVisibility="Disabled"/>
                         </StackPanel>
                     </ScrollViewer>
                 </Grid>
